build: base properties and dockerization

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=egguard-backend
+spring.datasource.url=jdbc:postgresql://localhost:5432/juan
+spring.datasource.username=amigoscode
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+
+#Commands to create database
+#psql -U amigoscode
+#create database juan
