--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,27 @@
 services:
   db:
     container_name: postgres
-    image: postgres:latest
-    environment:
-      POSTGRES_USER: amigoscode
-      POSTGRES_PASSWORD: password
-      PGDATA: /data/postgres
-    volumes:
-      - db_data:/data/postgres
-    ports:
-      - "5432:5432"
+    image: postgres:15
     restart: unless-stopped
+    ports:
+      - "${POSTGRES_PORT}:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
+  backend:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db
+    profiles:
+      - production
+    environment:
+      SPRING_DATASOURCE_URL: ${PRODUCTION_SPRING_DATASOURCE_URL}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
 volumes:
-  db_data:
+  pgdata:
