feat: cloudinary service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,5 +23,8 @@ services:
       SPRING_DATASOURCE_URL: ${PRODUCTION_SPRING_DATASOURCE_URL}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      CLOUDINARY_CLOUD_NAME: ${CLOUDINARY_CLOUD_NAME}
+      CLOUDINARY_API_KEY: ${CLOUDINARY_API_KEY}
+      CLOUDINARY_API_SECRET: ${CLOUDINARY_API_SECRET}
 volumes:
   pgdata:
