--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ cloudinary.api-secret=${CLOUDINARY_API_SECRET}
 # File upload configuration
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+spring.profiles.active=dev
+springdoc.swagger-ui.enabled=true
