build: added production datasource url to env

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ POSTGRES_PASSWORD=password
 POSTGRES_DB=egguard_db
 POSTGRES_PORT=5432
 SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/egguard_db?user=egguard_user&password=password
+PRODUCTION_SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/egguard_db?user=egguard_user&password=password
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
