--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto= update
+spring.flyway.enabled=false
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
