--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto= update
-spring.flyway.enabled=false
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto= none
+spring.flyway.enabled=true
+spring.jpa.defer-datasource-initialization=false
+spring.sql.init.mode=never
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
