fix: frontend cors compatibility

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ PRODUCTION_SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/egguard_db?user=eggua
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
+FRONTEND_URL=http://localhost:5173
