--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+cors.allowed-origin=${FRONTEND_URL}
 
 spring.jpa.hibernate.ddl-auto= none
 spring.flyway.enabled=true
