build: pgadmin in docker compose

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 FRONTEND_URL=http://localhost:5173
+PGADMIN_DEFAULT_EMAIL=pgadmin@egguard.com
+PGADMIN_DEFAULT_PASSWORD=admin
