--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,22 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
 
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4
+    restart: unless-stopped
+    ports:
+      - "5050:80"    
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin@egguard.com}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
+    depends_on:
+      - db
+    profiles:
+      - production
+
   backend:
     build:
       context: .
@@ -32,3 +48,4 @@ services:
       FRONTEND_URL: ${FRONTEND_URL}
 volumes:
   pgdata:
+  pgadmin-data:
